--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                     <p>There are so many amazing places to visit, it can be hard to decide where to go. So do some research to find a destination that aligns with your travel goal and budget.</p>
                 <button class="btn btn-primary button">Learn More</button>
                 </div>
-                <div class="col-md-3 ">
-                    <img src="assets/image/explore1.png" class="img-fluid" alt="Explore 1">
+                <div class="col-md-3 text-center">
+                    <img src="assets/image/explore1.png" class="img-fluid g4" alt="Explore 1">
                 </div>
-                <div class="col-md-3">
-                    <img src="assets/image/explore2.png" class="img-fluid" alt="Explore 2">
+                <div class="col-md-3 text-center">
+                    <img src="assets/image/explore2.png" class="img-fluid g5" alt="Explore 2">
                 </div>
             </div>
         </div>
@@ -362,7 +362,7 @@
                                 <a href="#"><img src="/assets/image/ic-tw.png" alt="Twitter" height="20"></a>
                                 <a href="#"><img src="/assets/image/ic-yt.png" alt="Instagram" height="20"></a>
                             </div>
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
