--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <section class="faq">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-6 text-left">
+                <div class="col-md-6 text-left  mb-4">
                     <h3>You have any questions? We can help answer it.</h3>
                     <p class="p1">Everything you need to know, in one place just take a look from this part.</p>
                     <div class="contact-us">
